@@ -27,7 +27,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.Objects.isNull;
@@ -65,16 +64,16 @@ public class CaseDataApplicantElementsMapper {
 
         return applicantDtoList.stream()
                 .map(applicantDto -> Element.<PartyDetails>builder().value(buildPartyDetails(applicantDto)).build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static PartyDetails buildPartyDetails(ApplicantDto applicantDto) {
         List<String> contactDetailsPrivateList1 = Arrays.stream(applicantDto.getContactDetailsPrivate())
-                .collect(Collectors.toList());
+                .toList();
         List<String> contactDetailsPrivateList2 = Arrays.stream(applicantDto.getContactDetailsPrivateAlternative())
-                .collect(Collectors.toList());
+                .toList();
         List<String> contactDetailsPrivateList = Stream.concat(contactDetailsPrivateList1.stream(),
-                contactDetailsPrivateList2.stream()).collect(Collectors.toList());
+                contactDetailsPrivateList2.stream()).toList();
         return PartyDetails
                 .builder()
                 .firstName(applicantDto.getApplicantFirstName())
@@ -154,8 +153,7 @@ public class CaseDataApplicantElementsMapper {
         } else {
             return contactDetailsPrivateList.stream().map(c -> TELEPHONE_FIELD.equals(c)
                 ? ConfidentialityListEnum.phoneNumber
-                : ConfidentialityListEnum.getValue(c)).collect(
-                Collectors.toList());
+                : ConfidentialityListEnum.getValue(c)).toList();
         }
     }
 
